force-app/main/default/objects/Account/fields/Phone_Details__c.field-meta.xml
<CustomField>
    <fullName>Phone_Details__c</fullName>
    <label>Phone Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>