force-app/main/default/objects/Account/fields/sdaf__c.field-meta.xml
<CustomField>
    <fullName>sdaf__c</fullName>
    <label>sdaf</label>
    <length>100</length>
    <type>Text</type>
</CustomField>