force-app/main/default/objects/Account/validationRules/mandatewebsite.validationRule-meta.xml
<ValidationRule>
    <fullName>mandatewebsite</fullName>
    <active>true</active>
    <errorConditionFormula>Website  = null</errorConditionFormula>
    <errorMessage>web site is requited to create account.</errorMessage>
</ValidationRule>